Issue #28162: Fixes Ctrl+Z handling in console readall()